Fix padding/margin for h3 so that clicking on a navigation target doesn't make the h3 disappear behind the sticky header

--- a/css/main.scss
+++ b/css/main.scss
@@ -214,3 +214,8 @@ a.mzn-nav-up, a.mzn-nav-next, a.mzn-nav-prev {
 .mzn-group-nav a {
   margin-right: 5px;
 }
+
+h3 {
+  padding-top: 60px;
+  margin-top: -50px;
+}
